--- a/OnlineLearning-main/templates/contact.html
+++ b/OnlineLearning-main/templates/contact.html
@@ -42,7 +42,12 @@
     </nav>
 
     <div style="background-color: red">
-      <form class="contact" id="contact">
+     <form
+        action="https://formspree.io/f/mqkwazgy"
+        class="contact"
+        id="contact"
+        method="post"
+      >
         <h2 class="text">Contact Us</h2>
         <div class="form">
           <input
